--- a/index.html
+++ b/index.html
@@ -290,8 +290,23 @@
                         <svg class="icon-join" width="20" height="20" aria-label="іконка linkedin"> <use href="./icons.svg#linkedin"></use></svg>
                     </a>
                 </li>            
-         </ul>
+        </ul>
     </div>
+<div class="container-subscribe">
+    <p class="text-subscribe" >Підпишіться на розсилку</p>
+    <form class="form-subscribe" name="form-subscribe">
+        <label class="group-subscribe">
+        <input  
+            class="field-subscribe" 
+            type="email" 
+            name="user-mail" 
+            placeholder="E-mail"
+            required>
+       <!-- <span class="label-subscribe" lang="en">E-mail</span>  -->
+    </label>
+<button class="button button-subscribe" type="submit"> Підписатися</button>
+    </form>
+</div>
 </div>
 </footer>
 
@@ -301,6 +316,33 @@
         <button class="modal-button" type="button" data-modal-close>
             <svg class="icon-close" width="18" height="18" aria-label="іконка close"> <use href="./icons.svg#close-icon"></use></svg>  
         </button>
+        <strong class="modal-label"> Залиште свої дані, ми вам передзвонимо</strong>
+        <form class="modal-form" name="modal-form">
+            <div class="modal-form-group" role="group">
+                <label class="modal-form-label" for="user-name">Ім'я</label>
+                <div class="modal-form-wrapper">
+                    <input class="modal-form-field" type="text" name="user-name" id="user-name">
+                    <svg class="icon-join" width="20" height="20" aria-label="іконка linkedin"> <use href="./icons.svg#linkedin"></use></svg>
+                </div>
+                <label class="modal-form-label" for="user-name">Ім'я</label>
+                <div class="modal-form-wrapper">
+                    <input class="modal-form-field" type="text" name="user-name" id="user-name">
+                    <svg class="icon-join" width="20" height="20" aria-label="іконка linkedin"> <use href="./icons.svg#linkedin"></use></svg>
+                </div>
+                <label class="modal-form-label" for="user-name">Ім'я</label>
+                <div class="modal-form-wrapper">
+                    <input class="modal-form-field" type="text" name="user-name" id="user-name">
+                    <svg class="icon-join" width="20" height="20" aria-label="іконка linkedin"> <use href="./icons.svg#linkedin"></use></svg>
+                </div>
+                <label class="modal-form-label" for="user-message">Ім'я</label>
+                    <textarea class="modal-form-message" name="user-message" id="user-message" rows="7"></textarea>
+            </div>
+            <div role="group">
+                <input class="modal-form-checkbox" type="checkbox" id="user-agreement">
+                <label for="user-agreement">Погоджуюся з розсилкою та приймаю <a href="">Умови договору</a></label>
+            </div>
+            <button class="button modal-form-button" type="submit">Відправити</button>
+        </form>
     </div>
 </div>
 <script src="./js/modal.js"></script>
