CSS  модальне вікно

--- a/index.html
+++ b/index.html
@@ -322,20 +322,20 @@
                 <label class="modal-form-label" for="user-name">Ім'я</label>
                 <div class="modal-form-wrapper">
                     <input class="modal-form-field" type="text" name="user-name" id="user-name">
-                    <svg class="icon-join" width="20" height="20" aria-label="іконка linkedin"> <use href="./icons.svg#linkedin"></use></svg>
+                    <svg class="icon-form" width="18" height="18" aria-label="іконка user"> <use href="./icons.svg#icon-name"></use></svg>
                 </div>
-                <label class="modal-form-label" for="user-name">Ім'я</label>
+                <label class="modal-form-label" for="user-tel">Телефон</label>
                 <div class="modal-form-wrapper">
-                    <input class="modal-form-field" type="text" name="user-name" id="user-name">
-                    <svg class="icon-join" width="20" height="20" aria-label="іконка linkedin"> <use href="./icons.svg#linkedin"></use></svg>
+                    <input class="modal-form-field" type="tel" name="user-tel" id="user-name">
+                    <svg class="icon-form" width="18" height="18" aria-label="іконка telefon"> <use href="./icons.svg#icon-tel"></use></svg>
                 </div>
-                <label class="modal-form-label" for="user-name">Ім'я</label>
+                <label class="modal-form-label" for="user-mail">Пошта</label>
                 <div class="modal-form-wrapper">
-                    <input class="modal-form-field" type="text" name="user-name" id="user-name">
-                    <svg class="icon-join" width="20" height="20" aria-label="іконка linkedin"> <use href="./icons.svg#linkedin"></use></svg>
+                    <input class="modal-form-field" type="email" name="user-mail" id="user-name">
+                    <svg class="icon-form" width="18" height="18" aria-label="іконка mail"> <use href="./icons.svg#icon-mail"></use></svg>
                 </div>
-                <label class="modal-form-label" for="user-message">Ім'я</label>
-                    <textarea class="modal-form-message" name="user-message" id="user-message" rows="7"></textarea>
+                <label class="modal-form-label" for="user-message">Коментар</label>
+                    <textarea class="modal-form-message" name="user-message" id="user-message" rows="7" placeholder="Введіть текст"></textarea>
             </div>
             <div role="group">
                 <input class="modal-form-checkbox" type="checkbox" id="user-agreement">
