--- a/index.html
+++ b/index.html
@@ -326,12 +326,12 @@
                 </div>
                 <label class="modal-form-label" for="user-tel">Телефон</label>
                 <div class="modal-form-wrapper">
-                    <input class="modal-form-field" type="tel" name="user-tel" id="user-name">
+                    <input class="modal-form-field" type="tel" name="user-tel" id="user-tel">
                     <svg class="icon-form" width="18" height="18" aria-label="іконка telefon"> <use href="./icons.svg#icon-tel"></use></svg>
                 </div>
                 <label class="modal-form-label" for="user-mail">Пошта</label>
                 <div class="modal-form-wrapper">
-                    <input class="modal-form-field" type="email" name="user-mail" id="user-name">
+                    <input class="modal-form-field" type="email" name="user-mail" id="user-mail">
                     <svg class="icon-form" width="18" height="18" aria-label="іконка mail"> <use href="./icons.svg#icon-mail"></use></svg>
                 </div>
                 <label class="modal-form-label" for="user-message">Коментар</label>
