--- a/portfolio.html
+++ b/portfolio.html
@@ -194,6 +194,23 @@
                 </li>            
          </ul>
     </div>
+    <div class="container-subscribe">
+        <p class="text-subscribe" >Підпишіться на розсилку</p>
+        <form class="form-subscribe" name="form-subscribe">
+            <label class="group-subscribe">
+            <input  
+                class="field-subscribe" 
+                type="email" 
+                name="user-mail" 
+                placeholder="E-mail"
+                required>
+           <!-- <span class="label-subscribe" lang="en">E-mail</span>  -->
+        </label>
+    <button class="button button-subscribe" type="submit"> Підписатися
+        <svg class="icon-subscribe" width="24" height="24" aria-label="іконка subscribe"> <use href="./icons.svg#icon-icon-send"></use></svg>
+    </button>
+        </form>
+    </div>
 </div>
 </footer>
 </body>
