--- a/index.html
+++ b/index.html
@@ -322,17 +322,29 @@
             <div class="modal-form-group" role="group">
                 <label class="modal-form-label" for="user-name">Ім'я</label>
                 <div class="modal-form-wrapper">
-                    <input class="modal-form-field" type="text" name="user-name" id="user-name">
+                    <input class="modal-form-field" 
+                    type="text"
+                    name="user-name" 
+                    id="user-name"
+                    required>
                     <svg class="icon-form" width="18" height="18" aria-label="іконка user"> <use href="./icons.svg#icon-name"></use></svg>
                 </div>
                 <label class="modal-form-label" for="user-tel">Телефон</label>
                 <div class="modal-form-wrapper">
-                    <input class="modal-form-field" type="tel" name="user-tel" id="user-tel">
+                    <input class="modal-form-field" 
+                    type="tel" 
+                    name="user-tel" 
+                    id="user-tel"
+                    required>
                     <svg class="icon-form" width="18" height="18" aria-label="іконка telefon"> <use href="./icons.svg#icon-tel"></use></svg>
                 </div>
                 <label class="modal-form-label" for="user-mail">Пошта</label>
                 <div class="modal-form-wrapper">
-                    <input class="modal-form-field" type="email" name="user-mail" id="user-mail">
+                    <input class="modal-form-field" 
+                    type="email" 
+                    name="user-mail"
+                    id="user-mail"
+                    required>
                     <svg class="icon-form" width="18" height="18" aria-label="іконка mail"> <use href="./icons.svg#icon-mail"></use></svg>
                 </div>
                 <label class="modal-form-label" for="user-message">Коментар</label>
