--- a/portfolio.html
+++ b/portfolio.html
@@ -12,22 +12,22 @@
 </head>
 <body>
      <!--------HEADER-------->
-<header class="header ">
-    <div class="header-container container">
-<nav class="nav-container">
-<a href="" lang="en" class="link logo"><span class="logo-part">Web</span>Studio</a>
-<ul class="list list-nav">
-    <li class="list-nav-item"><a href="./index.html" class="link header-link">Студія</a></li>
-    <li class="list-nav-item"><a href="./portfolio.html" class="link header-link current">Портфоліо</a></li>
-    <li class="list-nav-item"><a href="" class="link header-link ">Контакти</a></li>
+     <header class="header">
+        <div class="header__container container">
+    <nav class="nav">
+    <a href="" lang="en" class="link logo"><span class="logo__part">Web</span>Studio</a>
+    <ul class="list__nav list ">
+    <li class="nav__item"><a href="./index.html" class="nav__link link">Студія</a></li>
+    <li class="nav__item"><a href="./portfolio.html" class="nav__link nav__link-current link">Портфоліо</a></li>
+    <li class="nav__item"><a href="" class="nav__link link ">Контакти</a></li>
 </ul>
 </nav>
-<ul class="list list-header">
-    <li class="list-header-item"><a href="mailto:info@devstudio.com" class="link link-auth">
-        <svg class="auth-icon" width="16" height="12" aria-label="іконка envelope"> <use href="./icons.svg#envelope"></use></svg>
+<ul class="header__list list">
+    <li class="header__item"><a href="mailto:info@devstudio.com" class="header__link link">
+        <svg class="header__icon" width="16" height="12" aria-label="іконка envelope"> <use href="./icons.svg#envelope"></use></svg>
         info@devstudio.com</a></li>
-    <li class="list-header-item"><a href="tel:+380961111111" class="link link-auth">
-        <svg class="telefon-icon" width="10" height="16" aria-label="іконка smartfon"> <use href="./icons.svg#smartphone"></use></svg>
+    <li class="header__item"><a href="tel:+380961111111" class="header__link link">
+        <svg class="header__icon" width="10" height="16" aria-label="іконка smartfon"> <use href="./icons.svg#smartphone"></use></svg>
         +38 096 111 11 11</a></li>
 </ul>
 </div>
